# CMakeNote

./: CMakeLists.txt  CMakeNote.md  CMakeStudyNote.md  CMake_study.md  README.md  TutorialConfig.h.in  go.sh  operator_overload.cpp  tutorial.cxx  zsh_profile.sh
MathFunctions/: mysqrt.cxx
src/: tutorial.cxx
step2/: tutorial.cxx
step2/step2_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
step2/step2_build/MathFunctions/: Makefile  cmake_install.cmake
